# Titanic

./: README.md
TODO/: main.md
comp_tasks/: CMakeLists.txt
comp_tasks/include/comp_tasks/: home_component.hpp  maneuvering_component.hpp  speed_component.hpp
comp_tasks/include/comp_tasks/utils/: local_to_global.hpp
comp_tasks/include/utils/: global_to_local.hpp  mavros_repub_component.hpp  retrace_components.hpp
comp_tasks/lib/: bbox_calculations.cpp  docs.md  task_lib.cpp
comp_tasks/src/: docs.md  task_component.cpp  task_controller_component.cpp  task_controller_composition.cpp
comp_tasks/src/comp_tasks/: docs.md  home_component.cpp  maneuvering_component.cpp  speed_component.cpp
comp_tasks/src/utils/: docs.md  global_to_local.cpp  local_to_global.cpp  mavros_repub_component.cpp  mavros_repub_composition.cpp  retrace_component.cpp  retrace_composition.cpp  retracing_components.cpp  retracing_composition.cpp
